stalker_ui/network-policy.dev.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ui-dev
  namespace: stalker
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: ui
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 4200
  egress: []
