stalker_ui/network-policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ui
  namespace: stalker
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: ui-prod
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: flow-manager
      ports:
        - protocol: TCP
          port: 3000
